--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <h3> - Video</h2>
     <h3> - Audio</h2>
     <h3> - IT</h2>
+       <a class="img-tecnology"> <img width="400" src="tecnologia.jpg.jpg" alt=""></a> 
 </body>
 </html>
